--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,18 +6,18 @@ set -g allow-rename off
 set -g mouse on
 
 set-option -g status on
-set-option -g status-bg "#101010"
+set-option -g status-bg default
 set-option -g status-fg "#CCCCCC"
 set-option -g status-interval 2
 set-option -g status-justify "centre"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
-set-option -g status-left "#[fg=colour3]#I:#P > #h"
-set-option -g status-right "#[fg=colour3]#(date '+%a < %Y-%m-%d < %H:%M')"
+set-option -g status-left "#I:#P > 🖥  #H > Ⓦ #(hostname -I | awk '{print $1;}')"
+set-option -g status-right "#(date '+%a < %Y-%m-%d < %H:%M')"
 
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
 
-# set-window-option mode-keys vi
+#set-window-option mode-keys vi
