--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal 'xterm-256color'
+set -g default-terminal 'screen-256color'
 
 set -g history-limit 10000
 set -g allow-rename off
@@ -13,7 +13,7 @@ set-option -g status-justify "centre"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
 set-option -g status-left "#I:#P > 🖥  #H > Ⓦ #(hostname -I | awk '{print $1;}')"
-set-option -g status-right "#(~/dotfiles/spotify.sh) #(date '+%a < %Y-%m-%d < %H:%M')"
+set-option -g status-right "#(~/dotfiles/tmux/spotify.sh) #(date '+%a < %Y-%m-%d < %H:%M')"
 
 bind | split-window -h
 bind - split-window -v
