--- a/i3/config
+++ b/i3/config
@@ -136,8 +136,7 @@ gaps outer 6
 bindsym $mod+shift+l exec betterlockscreen -l dim
 
 # Rofi
-#TODO solve
-bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 800 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd"
+bindsym $mod+d exec rofi -show run
 
 # Keyboard controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -D pulse set Master 5%+ #increase sound volume
