--- a/tmux.conf
+++ b/tmux.conf
@@ -15,8 +15,8 @@ set-option -g status-right-length 90
 set-option -g status-left "#I:#P > 🖥  #H > Ⓦ #(hostname -I | awk '{print $1;}')"
 set-option -g status-right "#(~/dotfiles/tmux-scripts/spotify.sh) #(date '+%a < %Y-%m-%d < %H:%M')"
 
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
