--- a/polybar/config
+++ b/polybar/config
@@ -1,140 +1,1 @@
-;
-; Docs:
-; https://github.com/jaagr/polybar/wiki
-;
-
-[colors]
-bg = #2f343f
-bg-urgent = #e53935
-fg = #f3f4f5
-fg-inactive = #676e7d
-overline = #3ea290
-spotify = #2ebd59
-
-
-[bar/status]
-
-height = 25
-
-background = ${colors.bg}
-foreground = ${colors.fg}
-
-line-size = 2
-
-padding-left = 2
-padding-right = 2
-
-font-0 = Noto Sans:size=9;0
-font-1 = Noto Sans CJK JP:size=9;0
-font-2 = Noto Sans Symbols:size=10:antialias=true;0
-font-3 = Wuncon Siji:antialias=false:pixelsize=8;0
-font-4 = Font Awesome 5 Free:size=10;0
-font-5 = Font Awesome 5 Free Solid:size=10;0
-font-6 = Font Awesome 5 Brands:size=10;0
-
-modules-left = i3
-modules-center = spotify
-modules-right = alsa wlan eth date battery
-module-margin-right = 5
-
-
-[module/spotify]
-type = custom/script
-interval = 1
-exec = playerctl metadata -f '{{artist}} - {{title}}'
-format = <label>
-format-prefix = "  "
-format-foreground = ${colors.spotify}
-
-
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
-ws-icon-default = 
-
-label-focused = %icon%
-label-focused-overline = ${colors.overline}
-label-focused-padding = 4
-
-label-unfocused = %icon%
-label-unfocused-padding = 4
-
-label-urgent = %icon%
-label-urgent-background = ${colors.bg-urgent}
-label-urgent-padding = 4
-
-
-[module/wlan]
-type = internal/network
-interface = wlo1
-interval = 3.0
-
-label-connected =  %local_ip%
-
-
-[module/eth]
-type = internal/network
-interface = eno1
-interval = 3.0
-
-label-connected =  %local_ip%
-
-
-[module/date]
-type = internal/date
-
-interval = 5
-date = %Y-%m-%d
-time = %H:%M
-format-prefix = 
-label = %time% %date%
-
-
-[module/alsa]
-type = internal/alsa
-
-format-volume = <ramp-volume>
-
-label-muted = 
-label-muted-foreground = #66
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-
-
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = ACAD
-full-at = 98
-
-format-charging = <label-charging>
-format-discharging = <ramp-capacity>
-
-label-charging = 
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-
-[settings]
-screenchange-reload = true
-
+config.ini
