--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -124,6 +124,8 @@ mount-0 = /
 mount-1 = /home
 label-mounted-foreground = #7e7e7e
 label-mounted =   %mountpoint%: %percentage_used%%
+label-unmounted-foreground = #7e7e7e
+label-unmounted =   %mountpoint%: Not a mount point
 
 
 [module/player]
@@ -161,7 +163,7 @@ click-left = $HOME/.config/polybar/scripts/menu
 
 [module/eth]
 type = internal/network
-interface = eno1
+interface = enp4s0
 interval = 3.0
 label-connected =   %local_ip%
 label-disconnected =   Not connected
