--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ set -g allow-rename off
 
 set -g mouse on
 
+set-option -sg escape-time 10
 set-option -g status on
 set-option -g status-bg default
 set-option -g status-fg "#CCCCCC"
