--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,202 +1,99 @@
-;
-; https://github.com/jpldcarvalho
-; By jpldcarvalho
 
+;==========================================================
 
-[color]
-bg = #ff2f343f
-bg-trans = #552F343F
-bg-urgent = #e53935
-fg = #f3f4f5
-fg-inactive = #676e7d
-overline = #c49b7d
+[global/wm]
+margin-bottom = 0
+margin-top = 0
 
+override-redirect = false
 
-[settings]
-pseudo-transparency = true
-screenchange-reload = true
+include-file = ./colors
+include-file = ./modules
+include-file = ./decor
+include-file = ./system
 
-
-[bar/bottom]
-monitor = ${env:MONITOR:}
-font-0 = Noto Sans:size=9;0
-font-1 = Noto Sans CJK JP:size=8;0
-font-2 = Font Awesome 5 Free Solid:size=10;
-font-3 = Font Awesome 5 Brands:size=10;0
-font-4 = Material Icons:size=13;2
-font-5 = Material Icons:size=20;5
-bottom = true
-height = 35
-line-size = 2
-padding-left = 5
-padding-right = 5
-background = ${color.bg-trans}
-foreground = ${color.fg}
-module-margin-right = 5
-modules-left = apps i3
-modules-center = cpu ram filesystem
-modules-right = player commonapps commonweb files scrot email keepass
-
+; ...
 
 [bar/top]
 monitor = ${env:MONITOR:}
-height = 25
-background = ${color.bg-trans}
-foreground = ${color.fg}
-padding-left = 5
-padding-right = 5
-module-margin-right = 10
-font-0 = Noto Sans:size=10;1
-font-1 = Material Icons:size=13;2
-modules-left = title
-modules-center = date
-modules-right = wlan eth alsa battery power
+
+width = 100%
+height = 20
+
+offset-x = 0
+offset-y = 0
+
+background = #00000000
+foreground = ${color.foreground}
+
+radius-top = 1
+radius-bottom = 0.0
+
+; dpi = 96
+
+line-size = 2
+line-color = ${color.red}
+
+border-size = 3
+border-top-size = 15
+border-color = #00000000
+
+padding-left = 0
+padding-right = 0
+
+module-margin = 0
+
+;separator = " "
+separator-foreground = #00000000
+
+font-0 = "Operator Mono:size=8;2"
+font-1 = "Iosevka Nerd Font:size=8;3"
+font-2 = "Iosevka Nerd Font:size=12;3"
+font-3 = "Iosevka Nerd Font:size=14;4"
+font-4 = "Font Awesome 5 Free Solid:size=8;3"
+font-5 = "Font Awesome 5 Brands:size=10;3"
+font-6 = "Noto Sans CN:size=8;1"
+font-7 = "Noto Sans CJK KR:size=8;1"
+font-8 = "Noto Sans JP:size=8;1"
+font-9 = "Noto Sans HK:size=8;1"
+font-10 = "Noto Sans TW:size=8;1"
 
 
-[module/apps]
-type = custom/text
-content = "%{T6}%{T-}"
-click-left = $HOME/.config/polybar/scripts/menu
+modules-left =  spacing YLD launcher RD spacing2 GPL bspwm GRD sep YLD wired-network RD volume GRD spacing
+modules-center = TBLD player BRD spacing
+modules-right = GLD temperature cpu GPL GPL BLD filesystem BRD sep GLD date GPL BLD time BRD spacing
+
+fixed-center = true
 
 
-[module/title]
-type = internal/xwindow
-label-maxlen = 80
+spacing = 0
+dim-value = 1.0
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+enable-ipc = true
+
+;tray-position = right 
+tray-detached = false
+tray-maxsize = 16
+tray-background = ${color.background}
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 0
+tray-scale = 1.0
 
 
-[module/power]
-type = custom/text
-content = 
-click-left = $HOME/.config/polybar/scripts/power
+; wm-restack = generic
+; wm-restack = bspwm
+; wm-restack = i3
 
+; override-redirect = true
 
-[module/email]
-type = custom/text
-content = 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[settings]
+screenchange-reload = false
+pseudo-transparency = false
 
-[module/scrot]
-type = custom/text
-content = 
-
-
-[module/commonapps]
-type = custom/text
-content = 
-
-
-[module/commonweb]
-type = custom/text
-content = 
-
-
-[module/keepass]
-type = custom/text
-content = 
-click-left = /usr/bin/keepassxc
-
-
-[module/files]
-type = custom/text
-content =  
-click-left = /usr/bin/thunar
-
-
-[module/cpu]
-type = internal/cpu
-interval = 3
-label-foreground = #7e7e7e
-label =  %percentage-sum%%
-
-
-[module/ram]
-type = internal/memory
-interval = 3
-label-foreground = #7e7e7e
-label =  %gb_used%
-
-
-[module/filesystem]
-type = internal/fs
-interval = 10
-spacing = 5
-mount-0 = /
-mount-1 = /home
-label-mounted-foreground = #7e7e7e
-label-mounted =   %mountpoint%: %percentage_used%%
-label-unmounted-foreground = #7e7e7e
-label-unmounted =   %mountpoint%: Not a mount point
-
-
-[module/player]
-type = custom/script
-interval = 1
-exec = playerctl metadata -f '{{artist}} - {{title}}' | cut -c -45
-format-foreground = #7e7e7e
-format = <label>
-format-prefix = " "
-
-
-[module/i3]
-type = internal/i3
-pin-workspaces = true
-format = <label-state> <label-mode>
-index-sort = true
-label-focused = %name%
-label-focused-underline = ${color.overline}
-label-focused-padding = 4
-label-unfocused = %name%
-label-unfocused-padding = 4
-label-urgent = %name%
-label-urgent-background = ${color.overline}
-label-urgent-padding = 4
-
-
-[module/wlan]
-type = internal/network
-interface = wlo1
-interval = 3.0
-label-connected =   %local_ip%
-label-disconnected =   Not connected
-click-left = $HOME/.config/polybar/scripts/menu
-
-
-[module/eth]
-type = internal/network
-interface = enp4s0
-interval = 3.0
-label-connected =   %local_ip%
-label-disconnected =   Not connected
-
-
-[module/date]
-type = internal/date
-interval = 5
-date = %a %B %d
-time = %H:%M
-label = %date%, %time%
-format = <label>
-
-
-[module/alsa]
-type = internal/alsa
-format-volume = <ramp-volume> <label-volume>%
-label-volume = %percentage%
-label-muted = 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-
-
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = ACAD
-full-at = 99
-format-discharging = <label-discharging>%
-label-charging = 
-label-discharging =  %percentage%
-label-full = 
-
+; vim:ft=dosini
